# eSports-EXE

./: .doc-registry.json  .doc-tiers.json  .editorconfig  .env.example  .env.local.Development  .env.production.template  .env.render  .env.services.example  .gitattributes  .gitignore  .gitmessage  .gitmodules  .lighthouserc.json  .mailmap  .pre-commit-config.yaml  3CUBED_REVIEW_PROTOCOL.md  ADMIN_PANEL_INTEGRATION.md  AGENTS.md  AGENT_09_DELIVERABLES.md  AGENT_FRAMEWORK.md  AGENT_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ARCHIVE_MASTER_DOSSIER.md  ARTIFACT_COMPRESSION_GUIDE.md  ARTIFACT_IDENTIFICATION_FRAMEWORK.md  AUDIT_REPORT_DESIGN_SYSTEM.md  AXAS3_CODE_DATA_ANALYSIS_REPORT.md  BETTING_CHAT_DESIGN_COMPLETE.md  BRANCH_PROTECTION.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  COMMIT_STANDARDS.md  COMPLETION_SUMMARY.md  COMPLIANCE_MATRIX.json  COMPREHENSIVE_REMEDIATION_PLAN.md  COMPREHENSIVE_REVIEW_REPORT.md  (+267 more)
platform/simulation-game-rust/: .gitignore  Cargo.toml  README.md  RUST_EVALUATION_REPORT.md
platform/simulation-game-rust/benches/: combat_bench.rs  match_bench.rs
platform/simulation-game-rust/src/: lib.rs  main.rs  wasm_bindings.rs
platform/simulation-game-rust/src/agent/: mod.rs
platform/simulation-game-rust/src/combat/: mod.rs
platform/simulation-game-rust/src/defs/: mod.rs
platform/simulation-game-rust/src/economy/: mod.rs
platform/simulation-game-rust/src/math/: mod.rs
platform/simulation-game-rust/src/sim/: mod.rs
platform/simulation-game-rust/tests/: benchmark_comparison.py  integration_test.rs
services/api/: README.md  main.py  pyproject.toml  requirements-celery.txt  requirements.txt
services/api/docs/: CIRCUIT_BREAKER.md
services/api/gx/: README.md
services/api/gx/checkpoints/: player_stats_checkpoint.yml
services/api/gx/datasources/: postgres_datasource.yml
services/api/gx/expectations/: player_stats_suite.json
services/api/migrations/: 022_data_lineage.sql  023_feature_store.sql  024_model_registry.sql  025_security_rbac_observability.sql  alembic.ini  env.py
services/api/src/njz_api/: __init__.py  database.py  health.py  redis_cache.py
services/api/src/njz_api/analytics/: README.md  __init__.py  age_curves.py  confidence.py  decomposition.py  investment_grading.py  neural_regressor.py  overfitting_guard.py  rar_investment_grading.py  router.py  simrating.py
services/api/src/njz_api/auth/: __init__.py
services/api/src/njz_api/betting/: __init__.py
services/api/src/njz_api/challenges/: __init__.py
services/api/src/njz_api/chaos/: README.md  __init__.py  cli.py  middleware.py  reporting.py
services/api/src/verification/: __init__.py  routes.py  tenet_integration.py
services/api/src/webhooks/: __init__.py  pandascore.py
services/api/tests/: __init__.py  test_analytics.py  test_extraction.py  test_pandascore_webhook.py  test_pipeline.py  test_staging.py  test_tournaments_circuit_breaker.py
services/api/tests/integration/: docker-compose.test.yml  test_rotas_pipeline.py
services/api/tests/performance/: test_tracing_overhead.py
services/api/tests/unit/: test_circuit_breaker.py  test_database.py  test_health.py  test_tracing.py
(+4507 files in other folders)
