[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sator-api"
version = "1.0.0"
description = "SATOR API - FastAPI backend for NJZiteGeisTe Platform"
authors = ["SATOR Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
asyncpg = "^0.29.0"
aioredis = "^2.0.0"
redis = "^5.0.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
slowapi = "^0.1.9"
pyotp = "^2.9.0"
qrcode = "^7.4.2"
cryptography = "^44.0.0"
pywebpush = "^1.14.0"
websockets = "^12.0"
wsproto = "^1.2.0"
aiohttp = "^3.9.0"
structlog = "^23.2.0"
tenacity = "^8.2.0"
orjson = "^3.9.0"
ujson = "^5.9.0"
pyyaml = "^6.0.1"
numpy = "^1.24.0"
scipy = "^1.11.0"

# OpenTelemetry dependencies for distributed tracing
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-instrumentation-redis = "^0.41b0"
opentelemetry-instrumentation-asyncpg = "^0.41b0"
opentelemetry-exporter-otlp = "^1.20.0"
opentelemetry-exporter-jaeger = "^1.20.0"
opentelemetry-instrumentation-logging = "^0.41b0"
opentelemetry-instrumentation-httpx = "^0.41b0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
asgi-lifespan = "^2.1.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.poetry.extras]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "asgi-lifespan", "black", "ruff", "mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
